--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,3 +55,14 @@ h2{
 .sidebar {
 	text-align: center;
 }
+
+a {
+	text-decoration: none;
+	font-size: 20px;
+}
+
+a:hover{
+	text-decoration: underline;
+	background: #1F73CA;
+	color: #FFFFFF;
+}
