--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,11 +28,12 @@ footer {
 aside {
 	background:#ABBDC0;
 	position: fixed;
-	top: 43px;
+	top: 52px;
 	bottom:0; 
 	right:0;
 	left: 1020px;
 	height: 605px;
+	margin:10px; 
 }
 
 .tres {
@@ -64,5 +65,28 @@ a {
 a:hover{
 	text-decoration: underline;
 	background: #1F73CA;
+	color: #FFFFFF;
+}
+
+img {
+	height: 70px;
+	border-radius: 5px;
+}
+
+.menu {
+	background: #000;
+	width: 100%;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.menu li{
+	display: inline-block;
+}
+
+.menu li a {
+	padding: 10px 30px;
+	display: inline-block;
 	color: #FFFFFF;
 }
