--- a/css/estilofinal.css
+++ b/css/estilofinal.css
@@ -25,10 +25,42 @@ header nav ul {
 header nav ul li {
 	float: left;
 }
-
+ 
 header nav ul li a {
 	padding: 10px 20px;
 	display: block;
 	color: #fff;
 	text-decoration: none;
+}
+
+header nav ul li a:hover {
+	background: #75ACEC;
+}
+
+.main .articles {
+	float:left;
+	width: 68.5%;
+	margin-right:1.5%;
+}
+
+.main .articles article {
+	padding: 20px;
+	margin-bottom: 20px;
+	background: #fff;
+}
+
+aside {
+	width: 30%;
+	background: #AEBDDD;
+	float: left;
+	padding: 20px;
+	box-sizing: border-box;
+}
+
+footer {
+	background: #000;
+	color: #fff;
+	clear: both;
+	padding: 10px 0px;
+	text-align: center;
 }
